smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-missing-trait-value.smithy
// Parse error at line 4, column 17 near `//`: Expected: '@', but found '/' | Model
namespace com.foo

apply SomeShape // comment so spaces aren't eaten
string MyString
